# bevy-minesweeper

./: Cargo.toml
board_plugin/: Cargo.toml
board_plugin/src/: components.rs  lib.rs  resources.rs
board_plugin/src/components/: coordinates.rs
board_plugin/src/resources/: tile.rs  tile_map.rs
src/: main.rs
