[package]
name = "bevy-minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-inspector-egui = { version = "0.26.0", optional = true }
board_plugin = { version = "0.1.0", path = "board_plugin" }

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[workspace]
members = ["board_plugin"]
