[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-inspector-egui = { version = "0.26.0", optional = true }
colored = { version = "2.1.0", optional = true }
log = { version = "0.4.22", optional = true }
rand = "0.8.5"
serde = "1.0.210"

[features]
default = []
debug = ["colored", "bevy-inspector-egui", "log"]
